storage/rook-ceph/clusters/rook-ceph-hot-cluster/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rook-h-route
spec:
  parentRefs:
    - name: rook-gateway
      sectionName: https-rook-h
      namespace: rook-ceph
  hostnames:
    - rook-h.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8443
