storage/rook-ceph/clusters/rook-ceph-hot-cluster/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-hot-cluster-internal-ingress
  namespace: rook-ceph
  labels:
    ingress: cilium
  annotations:
    lbipam.cilium.io/ips: 10.140.79.4
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rook-ceph-mgr-dashboard
              port:
                number: 8443
